--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#6dce97">
-    <meta name="description" content="Calculez votre moyenne facilment avec vos identifiants Ecole Directe ! ✨">
+    <meta name="description" content="Calculez votre moyenne facilement avec vos identifiants Ecole Directe ! ✨">
 
     <link rel="icon" type="image/png" href="/assets/img/icon.png">
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
