--- a/public/error-page.html
+++ b/public/error-page.html
@@ -8,7 +8,13 @@
     <meta name="theme-color" content="#6dce97">
     <meta name="description" content="Calculez votre moyenne facilement avec vos identifiants Ecole Directe ! ✨">
 
-    <link rel="icon" type="image/png" href="/assets/img/icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+
     <link rel="stylesheet" type="text/css" href="/assets/css/error-page.css">
 </head>
 <body>
